# DIYnamo

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PROJECT_PROPOSAL.md  README.md  eval_baseline_samples.csv  eval_baseline_summary.csv
config/: node1.toml  node2.toml  node3.toml
eval/: plot_baseline.py  plot_failure.py  plot_quorum.py  plot_quorum_load.py  plot_recovery.py
graphs/task1/: eval_baseline_summary.csv
graphs/task2/: eval_failure_summary.csv
graphs/task2.2/: eval_quorum_load_summary.csv
graphs/task3/: eval_recovery_3a.csv  eval_recovery_3b.csv
graphs/task4/: eval_quorum_summary.csv
src/: lib.rs  main.rs
src/api/: mod.rs  types.rs
src/client/: http.rs  mod.rs
src/cluster/: delegate.rs  membership.rs  mod.rs  printer.rs  ring.rs  types.rs
src/config/: mod.rs  server.rs
src/coordinator/: handoff.rs  mod.rs
src/server/: mod.rs
src/storage/: mod.rs  rocks.rs
src/store/: hints.rs  mod.rs  rocksdb_store.rs  timestamp.rs
src/test_support/: mod.rs
tests/: eval_baseline.rs  eval_failure.rs  eval_quorum.rs  eval_quorum_load.rs  eval_recovery.rs  hint_handoff.rs  migration.rs  read_repair.rs
