[package]
name = "diynamo"
version = "0.1.0"
edition = "2024"

[lib]
name = "diynamo"
path = "src/lib.rs"

[[test]]
name = "hint_handoff"
path = "tests/hint_handoff.rs"
required-features = ["test-utils"]

[[test]]
name = "read_repair"
path = "tests/read_repair.rs"
required-features = ["test-utils"]

[[test]]
name = "migration"
path = "tests/migration.rs"
required-features = ["test-utils"]

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "gossip"
path = "src/bin/gossip.rs"

[dependencies]
anyhow = "1.0.102"
bincode = "1"
rocksdb = "0.24.0"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
memberlist = { version = "0.8.2", default-features = false, features = ["tcp", "tokio", "crc32"] }
smol_str = "0.3.6"
hashring_coordinator = "0.3.3"
uuid = { version = "1", features = ["v4"] }
tempfile = { version = "3.27.0", optional = true }

[features]
default = ["test-utils"]
test-utils = ["tempfile"]

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serial_test = "3"
